syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/mixdjoker/auth/pkg/user_v1;user_v1";

service User_V1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum Role {
    UNKNOWN = 0;
    USER = 1;
    ADMIN = 2;
}

message User {
    google.protobuf.StringValue name = 1;
    google.protobuf.StringValue email = 2;
    Role role = 3;
}

message UserCredential {
    User user = 1;
    google.protobuf.StringValue password = 2;
}

message UserInfo {
    google.protobuf.Int64Value id = 1;
    User user = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message CreateRequest {
    User user = 1;
    google.protobuf.StringValue password = 2;
    google.protobuf.StringValue password_confirm = 2;
}

message CreateResponse {
    google.protobuf.Int64Value id = 1;
}

message GetRequest {
    google.protobuf.Int64Value id = 1;
}

message GetResponse {
    UserInfo user_info = 1;
}

message UpdateRequest {
    google.protobuf.Int64Value id = 1;
    User user = 2;
}

message DeleteRequest {
    google.protobuf.Int64Value id = 1;
}
